--- a/railway.toml
+++ b/railway.toml
@@ -8,3 +8,6 @@ dockerfilePath = "Dockerfile"
 [deploy]
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+
+# Ensure environment variables are available
+[env]
