--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "email-validator>=2.3.0",
     "pydantic-settings>=2.0.0",
     "psycopg2-binary>=2.9.0",
+    "httpx>=0.27.0",
 ]
 
 [dependency-groups]
